# CameraXDemo

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/github/cameraxdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/cameraxdemo/: MainActivity.kt  Test.kt
app/src/main/java/com/github/cameraxdemo/application/: BaseApplication.kt
app/src/main/java/com/github/cameraxdemo/fragments/: CameraXFragment.kt  MediaEditorFragment.kt  PermissionsFragment.kt  UITestFragment.kt
app/src/main/java/com/github/cameraxdemo/model/: BaseResponse.kt
app/src/main/java/com/github/cameraxdemo/repository/: BaseRepository.kt
app/src/main/java/com/github/cameraxdemo/singleton/: CameraHolder.kt  CameraXModule.kt
app/src/main/java/com/github/cameraxdemo/state/: CameraXState.kt  PictureState.kt  (+3 more)
app/src/main/res/layout/: activity_main.xml  camera_ui_view.xml  camera_view.xml  fragment_camerax.xml  fragment_media_editor.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/github/cameraxdemo/: ExampleUnitTest.kt
buildSrc/src/main/kotlin/: Libs.kt  Versions.kt
gradle/wrapper/: gradle-wrapper.properties
libjpeg/: CMakeLists.txt  build.gradle  build.gradle.kts
libjpeg/src/androidTest/java/com/github/libjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/cpp/: NativeJpeg.cpp  native-lib.cpp
libjpeg/src/main/java/com/github/libjpeg/: NativeUtils.kt
libjpeg/src/test/java/com/github/libjpeg/: ExampleUnitTest.java
(+13 files in other folders)
